--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,6 +1,4 @@
-doctype html 
-html 
-    head 
-        title Sản phẩm
-    body
-        h1 Sản phẩm
+extend ../../layouts/default.pug
+
+block main 
+    h1 Sản phẩm
