--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,6 +1,4 @@
-doctype html 
-html 
-    head 
-        title Trang chủ
-    body
-        h1 Trang chủ
+extend ../../layouts/default.pug
+
+block main 
+    h1 Trang chủ
