--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,18 +1,4 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
 block main
-  .container.my-3
-    .row
-      .col-12
-        +box-head('Danh sách sản phẩm')
-
-    .row
-      .col-4.mb-3
-        .product-item
-            .inner-image
-                img(src="https://cdn.dummyjson.com/product-images/beauty/essence-mascara-lash-princess/thumbnail.webp", alt="iPhone 9")
-            .inner-content
-                h3.inner-title iPhone 9
-                h3.inner-price-new 80$
-                h3.inner-price-old 100$
-                h3.inner-discount -20%
+    div Trang chu
