--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,4 +1,19 @@
-extend ../../layouts/default.pug
+extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+block main
+  .container.my-3
+    .row
+      .col-12
+        +box-head('Danh sách sản phẩm')
 
-block main 
-    h1 Sản phẩm
+    .row
+        each product in products
+            .col-4.mb-3
+                .product-item
+                    .inner-image
+                        img(src=product.thumbnail, alt= product.title)
+                    .inner-content
+                        h3.inner-title #{product.title}
+                        h3.inner-price-new #{product.newPrice}$
+                        h3.inner-price-old #{product.price}$
+                        h3.inner-discount -#{product.discountPercentage}%
