--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -12,5 +12,5 @@ html
 
             .main
                 block main
-        
+        script(src='/admin/js/script.js')
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous")
